--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
               <button class="tab is-active" role="tab" aria-selected="true"  data-swap="pane-overview">Overview</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-techreadout">Tech Readout</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-gator">GATOR</button>
+              <button class="tab" role="tab" aria-selected="false" data-swap="tab-weapons">Weapons</button>
             </div>
           </div>
 
@@ -365,6 +366,10 @@
       <button class="ghost-btn" id="btn-roll-both" title="Roll both (R)">Roll</button>
     </div>
   </div>
+</section>
+                   
+<section id="tab-weapons" class="swap-pane" role="tabpanel" aria-labelledby="Weapons">
+  <div id="weapons-list" style="padding:10px;"></div>
 </section>
 
     </main>
