--- a/index.html
+++ b/index.html
@@ -366,11 +366,15 @@
       <button class="ghost-btn" id="btn-roll-both" title="Roll both (R)">Roll</button>
     </div>
   </div>
-</section>
-                   
-<section id="tab-weapons" class="swap-pane" role="tabpanel" aria-labelledby="Weapons">
-  <div id="weapons-list" style="padding:10px;"></div>
-</section>
+</section> <!-- closes gtr-pane-D (Dice/TN) -->
+
+</section> <!-- closes pane-gator -->                   
+  <!-- Weapons (sibling swap-pane) -->
+  <section id="tab-weapons" class="swap-pane" role="tabpanel" aria-labelledby="Weapons">
+    <div id="weapons-list" style="padding:10px;"></div>
+  </section>
+</div> <!-- end .card-c -->
+
 
     </main>
 
