--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B^ttleTech // Gator Console</title>
+  <title>TRS:80//Technical Readout System:80</title>
   <link rel="icon" href="data:," />
   <link rel="stylesheet" href="./style.css?v=5">
 </head>
@@ -17,7 +17,7 @@
       <div class="topbar-left">
         <div class="brand">
           <span class="glyph" aria-hidden="true">✚</span>
-          <span class="brand-text">[MECH]</span>
+          <span class="brand-text">[TRS:80]</span>
         </div>
       </div>
       <div class="topbar-right actions actions--top">
@@ -378,19 +378,16 @@
 
     </main>
 
-<!-- Footer with slim attribution -->
-<footer class="app-footer" role="contentinfo" 
-        style="position:fixed; bottom:0; left:0; width:100%; 
-               font-size:0.65em; text-align:center; color:#888; 
-               padding:2px 0; border-top:1px solid #333; 
+<!-- Slim Footer -->
+<footer style="position:fixed; bottom:0; left:0; width:100%;
+               font-size:0.65em; line-height:1.2; text-align:center; 
+               color:#888; padding:2px 4px; border-top:1px solid #333; 
                background:#111; z-index:999;">
-
-  © MegaMek Data (CC BY-NC-SA 4.0) • Fan tool  
-  <button id="footer-about" class="linklike" 
-          style="background:none; border:0; color:#4af; cursor:pointer;">
+  © MegaMek Data (CC BY-NC-SA 4.0) • Fan tool
+  <button id="footer-about" style="background:none; border:0; 
+          color:#4af; font-size:1em; cursor:pointer; margin-left:6px;">
     About
   </button>
-
 </footer>
 
   </div>
