--- a/index.html
+++ b/index.html
@@ -378,14 +378,15 @@
 
     </main>
 
-<!-- Slim Footer -->
-<footer style="position:fixed; bottom:0; left:0; width:100%;
-               font-size:0.65em; line-height:1.2; text-align:center; 
-               color:#888; padding:2px 4px; border-top:1px solid #333; 
-               background:#111; z-index:999;">
-  © MegaMek Data (CC BY-NC-SA 4.0) • Fan tool
-  <button id="footer-about" style="background:none; border:0; 
-          color:#4af; font-size:1em; cursor:pointer; margin-left:6px;">
+<!-- Slim in-app footer -->
+<footer class="app-footer" role="contentinfo" 
+        style="font-size:0.65em; line-height:1.2; color:#888; 
+               padding:2px 4px; border-top:1px solid #333; 
+               background:#111; text-align:center;">
+  <span>© MegaMek Data (CC BY-NC-SA 4.0) • Fan tool</span>
+  <button id="footer-about" class="linklike" 
+          style="background:none; border:0; color:#4af; 
+                 cursor:pointer; margin-left:6px; font-size:1em;">
     About
   </button>
 </footer>
