--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
         style="font-size:0.65em; line-height:1.2; color:#888; 
                padding:2px 4px; border-top:1px solid #333; 
                background:#111; text-align:center;">
-  <span>© MegaMek Data (CC BY-NC-SA 4.0) • Fan tool</span>
+   <span>
+    IP Catalyst Games & Topps | Code MIT License | Database © MegaMek Data (CC BY-NC-SA 4.0) • Fan tool
+  </span>
   <button id="footer-about" class="linklike" 
           style="background:none; border:0; color:#4af; 
                  cursor:pointer; margin-left:6px; font-size:1em;">
