--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
         style="font-size:0.65em; line-height:1.2; color:#888; 
                padding:2px 4px; border-top:1px solid #333; 
                background:#111; text-align:center;">
-   <span>
-    IP Catalyst Games & Topps | Code MIT License | Database © MegaMek Data (CC BY-NC-SA 4.0) • Fan tool
+ <span>
+    BattleTech & ’Mech © Topps / Catalyst • App code © 2025 MIT License • Data sourced from MegaMek (CC BY-NC-SA 4.0)
   </span>
   <button id="footer-about" class="linklike" 
           style="background:none; border:0; color:#4af; 
