--- a/index.html
+++ b/index.html
@@ -482,6 +482,21 @@
           </div>
         </fieldset>
 
+<fieldset style="margin:0;padding:0;border:0;">
+  <legend class="dim" style="margin-bottom:6px;">Battle Value (BV)</legend>
+  <div style="display:flex;gap:8px;align-items:end;">
+    <div>
+      <label class="dim small" for="f-bv-min">Min</label>
+      <input id="f-bv-min" class="gtr-in tiny" type="number" min="0" step="1" placeholder="Any">
+    </div>
+    <div>
+      <label class="dim small" for="f-bv-max">Max</label>
+      <input id="f-bv-max" class="gtr-in tiny" type="number" min="0" step="1" placeholder="Any">
+    </div>
+  </div>
+</fieldset>
+
+        
         <!-- Roles -->
         <fieldset style="grid-column:1 / -1;margin:0;padding:0;border:0;">
           <legend class="dim" style="margin-bottom:6px;">Role</legend>
