--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <noscript><div class="noscript">This module requires JavaScript enabled.</div></noscript>
 
-  <div class="app is-embed"><!-- keep .is-embed for compact widget -->
+  <div class="app">
 
 <!-- In .ui-topbar (left side is a good spot) -->
 <div class="topbar-left">
