--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TRS:80//Technical Readout System:80</title>
-  <link rel="icon" href="data:," />
   <link rel="stylesheet" href="./style.css?v=6">
+
+  <!-- SVG favicon (crisp on any DPI) -->
+  <link rel="icon" type="image/svg+xml"
+        href='data:image/svg+xml;utf8,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+    <rect x="6" y="10" width="52" height="40" rx="6" fill="%23121826" />
+    <path d="M18 22l12 10-12 10" fill="none" stroke="%23ffd06e" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M36 42h12" fill="none" stroke="%23ffd06e" stroke-width="4" stroke-linecap="round"/>
+  </svg>'>
+
+  <!-- PNG fallback (optional) -->
+  <link rel="icon" type="image/png" sizes="32x32"
+        href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAA...'>
+  
+  <link rel="apple-touch-icon" sizes="180x180"
+        href='data:image/svg+xml;utf8,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 180">
+    <rect width="180" height="180" rx="36" fill="%23121826"/>
+    <path d="M45 60l45 37-45 37" fill="none" stroke="%23ffd06e" stroke-width="10" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M105 134h30" fill="none" stroke="%23ffd06e" stroke-width="10" stroke-linecap="round"/>
+  </svg>'>
+
+  <!-- Nice address bar color on mobile -->
+  <meta name="theme-color" content="#121826">
 </head>
+
 <body>
   <noscript><div class="noscript">This module requires JavaScript enabled.</div></noscript>
 
@@ -16,7 +40,21 @@
       <div class="topbar-left">
         <button id="btn-side-toggle" class="icon-btn" aria-label="Open mech list" aria-expanded="false" aria-controls="mech-sidebar" style="margin-right:6px;">☰</button>
         <div class="brand">
-          <span class="glyph" aria-hidden="true">✚</span>
+          <span class="glyph" aria-hidden="true" style="display:inline-flex;align-items:center">
+  <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"
+       xmlns="http://www.w3.org/2000/svg" fill="none">
+    <!-- bezel -->
+    <rect x="2" y="3" width="20" height="16" rx="2.5"
+          fill="rgba(255,255,255,0.02)" stroke="currentColor" opacity="0.9"/>
+    <!-- prompt >
+    -->
+    <path d="M7 8l4 4-4 4" stroke="currentColor" stroke-width="1.8"
+          stroke-linecap="round" stroke-linejoin="round"/>
+    <!-- cursor _ -->
+    <path d="M13 16h4" stroke="currentColor" stroke-width="1.8"
+          stroke-linecap="round"/>
+  </svg>
+</span>
           <span class="brand-text">[TRS:80]</span>
         </div>
       </div>
