--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 
   <section class="tro-boot__panel" role="dialog" aria-label="TRS:80 Technical Readout Loader">
     <header class="tro-boot__hdr">
-      <h1 class="tro-boot__title">TRS:80 // TECHNICAL READOUT LOADER</h1>
+      <h1 class="tro-boot__title">TRS:80//Technical Readout System:80 LOADER</h1>
       <div class="tro-boot__meta">CAT#: TRS-80-TROLDR v2.0 · TRO-PREFACE · PAGE 00</div>
     </header>
 
