--- a/index.html
+++ b/index.html
@@ -466,16 +466,31 @@
         <button id="modal-close" class="icon-btn" aria-label="Close">✕</button>
       </header>
       <div class="modal-c">
-        <p class="small">
-          This project uses data adapted from <strong>“MegaMek Data (C) 2025 by The MegaMek Team”</strong>,
-          licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">CC BY-NC-SA 4.0</a>.
-          Converted JSON remains under the same license (ShareAlike). This is a fan-made, non-commercial tool.
-        </p>
-        <p class="small dim">
-          BattleTech, BattleMech, ’Mech, and AeroTech are registered trademarks of The Topps Company, Inc. All Rights Reserved.
-          Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of InMediaRes Productions, LLC.
-          MechWarrior is a trademark of Microsoft Corporation. This project is not endorsed by or affiliated with the above.
-        </p>
+<p class="small">
+  This project uses data adapted from 
+  <strong>“MegaMek Data (C) 2025 by The MegaMek Team”</strong>, 
+  licensed under 
+  <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">
+    CC BY-NC-SA 4.0
+  </a>. Converted JSON remains under the same license (ShareAlike).<br><br>
+
+  Mech line art is fetched directly from 
+  <a href="https://www.sarna.net/wiki/Main_Page" target="_blank" rel="noopener">
+    Sarna BattleTechWiki
+  </a> — © original artists/publishers. Images marked 
+  <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener">
+    CC BY-SA
+  </a> or <em>Public Domain</em> are credited per their file pages. 
+  Some images may be non-free/fair use and are shown under those terms. 
+  This app does not host images.<br><br>
+
+  This is a fan-made, non-commercial tool. 
+  BattleTech, BattleMech, ’Mech, and AeroTech are registered trademarks of 
+  The Topps Company, Inc. All Rights Reserved. Catalyst Game Labs and the Catalyst Game Labs logo 
+  are trademarks of InMediaRes Productions, LLC. MechWarrior is a trademark of Microsoft Corporation. 
+  This project is not endorsed by or affiliated with the above.
+</p>
+
         <hr class="modal-divider" />
         <div class="small">
           <div><strong>Source:</strong> MegaMek <code>mm-data</code> (meks)</div>
