--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- PNG fallback (optional) -->
   <link rel="icon" type="image/png" sizes="32x32"
         href='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAA...'>
-  
+
   <link rel="apple-touch-icon" sizes="180x180"
         href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 180">
@@ -41,37 +41,23 @@
         <button id="btn-side-toggle" class="icon-btn" aria-label="Open mech list" aria-expanded="false" aria-controls="mech-sidebar" style="margin-right:6px;">☰</button>
         <div class="brand">
           <span class="glyph" aria-hidden="true" style="display:inline-flex;align-items:center">
-  <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"
-       xmlns="http://www.w3.org/2000/svg" fill="none">
-    <!-- bezel -->
-    <rect x="2" y="3" width="20" height="16" rx="2.5"
-          fill="rgba(255,255,255,0.02)" stroke="currentColor" opacity="0.9"/>
-    <!-- prompt >
-    -->
-    <path d="M7 8l4 4-4 4" stroke="currentColor" stroke-width="1.8"
-          stroke-linecap="round" stroke-linejoin="round"/>
-    <!-- cursor _ -->
-    <path d="M13 16h4" stroke="currentColor" stroke-width="1.8"
-          stroke-linecap="round"/>
-  </svg>
-</span>
+            <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"
+                 xmlns="http://www.w3.org/2000/svg" fill="none">
+              <rect x="2" y="3" width="20" height="16" rx="2.5"
+                    fill="rgba(255,255,255,0.02)" stroke="currentColor" opacity="0.9"/>
+              <path d="M7 8l4 4-4 4" stroke="currentColor" stroke-width="1.8"
+                    stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M13 16h4" stroke="currentColor" stroke-width="1.8"
+                    stroke-linecap="round"/>
+            </svg>
+          </span>
           <span class="brand-text">[TRS:80]</span>
         </div>
       </div>
 
       <div class="topbar-right actions actions--top">
-       <!-- 
-        <button id="btn-load-mech" class="btn" title="Load a mech JSON">Load</button>
-
-        <button id="btn-custom-mech" class="btn ghost" title="Open Custom Builder" aria-label="Filter">
-          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle; margin-right:4px">
-            <path d="M3 4h18l-7 8v6l-4 2v-8z"/>
-          </svg>
-          </button>
-        -->
-<button id="btn-lance" class="btn ghost" title="Show Lance" aria-controls="lance-dock">Lance</button>
+        <button id="btn-lance" class="btn ghost" title="Show Lance" aria-controls="lance-dock">Lance</button>
         <button id="btn-owned" class="btn ghost" title="Owned Chassis" aria-controls="owned-dock">Owned</button>
-
 
         <button id="btn-import" class="btn icon ghost" title="Import session JSON" aria-label="Import">⬇</button>
         <button id="btn-export" class="btn icon ghost" title="Export session JSON" aria-label="Export">⬆</button>
@@ -80,7 +66,7 @@
 
         <button id="btn-load-manifest" class="btn icon" title="Fetch manifest.json" aria-label="Load Manifest">📄</button>
 
-        <!-- Search mounts here (JS inserts input next to this button) -->
+        <!-- (JS mounts search input here if needed) -->
 
         <button id="btn-settings" class="btn icon ghost" title="Settings (About & Attribution)" aria-label="Settings">⚙</button>
       </div>
@@ -104,20 +90,17 @@
       <div id="sidebar-scrim" hidden></div>
 
       <!-- Main column -->
-
-
       <section class="col-right">
-              <div id="lance-dock" class="hidden"></div>
+        <div id="lance-dock" class="hidden"></div>
         <div id="owned-dock" hidden></div>
 
-        <!-- Swappable header card (Overview ↔ Tech Readout ↔ GATOR) -->
+        <!-- Swappable header card (Overview ↔ Tech Readout ↔ GATOR ↔ Weapons) -->
         <div class="card" id="top-swapper">
           <div class="card-h">
             <div class="card-title">Current Selection</div>
             <div class="tabs" role="tablist" aria-label="Top view switch">
               <button class="tab is-active" role="tab" aria-selected="true"  data-swap="pane-overview">Overview</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-techreadout">Tech Readout</button>
-              <button class="tab" role="tab" aria-selected="false" data-swap="pane-image">Image</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-gator">GATOR</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="tab-weapons">Weapons</button>
             </div>
@@ -127,7 +110,7 @@
             <!-- OVERVIEW -->
             <section id="pane-overview" class="swap-pane is-active" role="tabpanel" aria-labelledby="Overview">
               <div class="overview-flex">
-                <!-- Vertical Heat --> 
+                <!-- Vertical Heat -->
                 <div class="vheat">
                   <div class="vheat-bar" id="vheat" role="meter" aria-valuemin="0" aria-valuemax="50" aria-valuenow="0">
                     <div class="vheat-fill" id="vheat-fill" style="height:0%"></div>
@@ -267,23 +250,14 @@
                   <div id="tr-ammo" hidden></div>
                 </section>
 
-                <!-- Lore -->
+                <!-- Lore & History (now also holds the image at the top) -->
                 <section id="tr-pane-LORE" class="gtr-pane" role="tabpanel" aria-labelledby="Lore & History">
-                  <div id="tr-overview-wrap"     hidden><strong>Overview</strong><div class="mt6" id="tr-overview"></div></div>
-                  <div id="tr-capabilities-wrap" hidden><strong>Capabilities</strong><div class="mt6" id="tr-capabilities"></div></div>
-                  <div id="tr-deployment-wrap"   hidden><strong>Deployment</strong><div class="mt6" id="tr-deployment"></div></div>
-                  <div id="tr-history-wrap"      hidden><strong>History</strong><div class="mt6" id="tr-history"></div></div>
+                  <!-- Module will inject a figure (image + optional credits) at the top here -->
+                  <div id="tr-lore-content" class="mt6"><!-- module will fill lore text here --></div>
                 </section>
               </div>
             </section>
 
-<section id="pane-image" class="swap-pane" role="tabpanel" aria-labelledby="Image">
-  <div id="image-panel" class="card" style="padding:10px;">
-    <!-- images.js will render inside here -->
-  </div>
-</section>
-
-            
             <!-- GATOR -->
             <section id="pane-gator" class="swap-pane" role="tabpanel" aria-labelledby="GATOR">
               <div class="card" id="gator-card">
@@ -466,30 +440,30 @@
         <button id="modal-close" class="icon-btn" aria-label="Close">✕</button>
       </header>
       <div class="modal-c">
-<p class="small">
-  This project uses data adapted from 
-  <strong>“MegaMek Data (C) 2025 by The MegaMek Team”</strong>, 
-  licensed under 
-  <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">
-    CC BY-NC-SA 4.0
-  </a>. Converted JSON remains under the same license (ShareAlike).<br><br>
+        <p class="small">
+          This project uses data adapted from
+          <strong>“MegaMek Data (C) 2025 by The MegaMek Team”</strong>,
+          licensed under
+          <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">
+            CC BY-NC-SA 4.0
+          </a>. Converted JSON remains under the same license (ShareAlike).<br><br>
 
-  Mech line art is fetched directly from 
-  <a href="https://www.sarna.net/wiki/Main_Page" target="_blank" rel="noopener">
-    Sarna BattleTechWiki
-  </a> — © original artists/publishers. Images marked 
-  <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener">
-    CC BY-SA
-  </a> or <em>Public Domain</em> are credited per their file pages. 
-  Some images may be non-free/fair use and are shown under those terms. 
-  This app does not host images.<br><br>
+          Mech line art is fetched directly from
+          <a href="https://www.sarna.net/wiki/Main_Page" target="_blank" rel="noopener">
+            Sarna BattleTechWiki
+          </a> — © original artists/publishers. Images marked
+          <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener">
+            CC BY-SA
+          </a> or <em>Public Domain</em> are credited per their file pages.
+          Some images may be non-free/fair use and are shown under those terms.
+          This app does not host images.<br><br>
 
-  This is a fan-made, non-commercial tool. 
-  BattleTech, BattleMech, ’Mech, and AeroTech are registered trademarks of 
-  The Topps Company, Inc. All Rights Reserved. Catalyst Game Labs and the Catalyst Game Labs logo 
-  are trademarks of InMediaRes Productions, LLC. MechWarrior is a trademark of Microsoft Corporation. 
-  This project is not endorsed by or affiliated with the above.
-</p>
+          This is a fan-made, non-commercial tool.
+          BattleTech, BattleMech, ’Mech, and AeroTech are registered trademarks of
+          The Topps Company, Inc. All Rights Reserved. Catalyst Game Labs and the Catalyst Game Labs logo
+          are trademarks of InMediaRes Productions, LLC. MechWarrior is a trademark of Microsoft Corporation.
+          This project is not endorsed by or affiliated with the above.
+        </p>
 
         <hr class="modal-divider" />
         <div class="small">
@@ -665,36 +639,32 @@
   <!-- Toast (used by script.js) -->
   <div id="toast" class="toast" hidden></div>
 
-<script src="./modules/lance.js" defer></script>
-<script src="./modules/owned.js" defer></script>
-<script src="./modules/images.js" defer></script>
-<script src="./script.js" defer></script>
+  <!-- One module entrypoint (all other modules are imported from within) -->
+  <script type="module" src="./script.js"></script>
 
-<!-- ===== TRS:80 • Technical Readout Boot ===== -->
-<div id="troBoot" class="tro-boot" aria-hidden="false">
-  <div class="tro-boot__vignette"></div>
-  <div class="tro-boot__scan"></div>
-  <div class="tro-boot__grid"></div>
-  <div class="tro-boot__watermark" aria-hidden="true"></div>
+  <!-- ===== TRS:80 • Technical Readout Boot ===== -->
+  <div id="troBoot" class="tro-boot" aria-hidden="false">
+    <div class="tro-boot__vignette"></div>
+    <div class="tro-boot__scan"></div>
+    <div class="tro-boot__grid"></div>
+    <div class="tro-boot__watermark" aria-hidden="true"></div>
 
-  <section class="tro-boot__panel" role="dialog" aria-label="TRS:80 Technical Readout Loader">
-    <header class="tro-boot__hdr">
-      <h1 class="tro-boot__title">TRS:80//Technical Readout System:80 LOADER</h1>
-      <div class="tro-boot__meta">CAT#: TRS-80-TROLDR v2.0 · TRO-PREFACE · PAGE 00</div>
-    </header>
+    <section class="tro-boot__panel" role="dialog" aria-label="TRS:80 Technical Readout Loader">
+      <header class="tro-boot__hdr">
+        <h1 class="tro-boot__title">TRS:80//Technical Readout System:80 LOADER</h1>
+        <div class="tro-boot__meta">CAT#: TRS-80-TROLDR v2.0 · TRO-PREFACE · PAGE 00</div>
+      </header>
 
-    <pre id="troLog" class="tro-boot__log" aria-live="polite"></pre>
+      <pre id="troLog" class="tro-boot__log" aria-live="polite"></pre>
 
-    <div class="tro-boot__progress" aria-hidden="true">
-      <div id="troBar" class="tro-boot__bar"></div>
-    </div>
+      <div class="tro-boot__progress" aria-hidden="true">
+        <div id="troBar" class="tro-boot__bar"></div>
+      </div>
 
-    <div id="troHint" class="tro-boot__hint">
-      PRESS <kbd>ENTER</kbd> TO OPEN TRO ▌ • AUTO WHEN READY
-    </div>
-  </section>
-</div>
-  
-
+      <div id="troHint" class="tro-boot__hint">
+        PRESS <kbd>ENTER</kbd> TO OPEN TRO ▌ • AUTO WHEN READY
+      </div>
+    </section>
+  </div>
 </body>
 </html>
