--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
               <button class="tab" role="tab" aria-selected="false" data-swap="pane-image">Image</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-gator">GATOR</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="tab-weapons">Weapons</button>
+              <button class="tab" role="tab" aria-selected="false" data-swap="pane-sheet">Sheet</button>
             </div>
           </div>
 
@@ -170,6 +171,11 @@
                 </div>
               </div>
             </section>
+
+            <section id="pane-sheet" class="swap-pane" role="tabpanel" aria-labelledby="Sheet">
+  <div id="sheet-root" class="rs-host"></div>
+</section>
+
 
             <!-- TECH READOUT -->
             <section id="pane-techreadout" class="swap-pane" role="tabpanel" aria-labelledby="Tech Readout">
@@ -668,6 +674,7 @@
 <script src="./modules/lance.js" defer></script>
 <script src="./modules/owned.js" defer></script>
 <script src="./modules/images.js" defer></script>
+<script src="./modules/sheet.js" defer></script>
 <script src="./script.js" defer></script>
 
 <!-- ===== TRS:80 • Technical Readout Boot ===== -->
