--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
             <div class="tabs" role="tablist" aria-label="Top view switch">
               <button class="tab is-active" role="tab" aria-selected="true"  data-swap="pane-overview">Overview</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-techreadout">Tech Readout</button>
-              <button class="tab" role="tab" aria-selected="false" data-swap="pane-image">Image</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="pane-gator">GATOR</button>
               <button class="tab"           role="tab" aria-selected="false" data-swap="tab-weapons">Weapons</button>
               <button class="tab" role="tab" aria-selected="false" data-swap="pane-sheet">Sheet</button>
@@ -185,6 +184,7 @@
                   <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="tr-pane-AI">Armor &amp; Internals</button>
                   <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="tr-pane-EQ">Equipment</button>
                   <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="tr-pane-LORE">Lore &amp; History</button>
+                                <button class="gtr-subtab" role="tab" aria-selected="false" data-swap="pane-image">Image</button>
                 </div>
 
                 <!-- Chassis & Systems -->
