--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="tr-pane-AI">Armor &amp; Internals</button>
                   <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="tr-pane-EQ">Equipment</button>
                   <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="tr-pane-LORE">Lore &amp; History</button>
-                                <button class="gtr-subtab" role="tab" aria-selected="false" data-swap="pane-image">Image</button>
+                  <button class="gtr-subtab"           role="tab" aria-selected="false" data-tr-tab="pane-image">Image</button>
                 </div>
 
                 <!-- Chassis & Systems -->
@@ -283,7 +283,7 @@
               </div>
             </section>
 
-<section id="pane-image" class="swap-pane" role="tabpanel" aria-labelledby="Image">
+<section id="pane-image" class="gtr-pane" role="tabpanel" aria-labelledby="Image">
   <div id="image-panel" class="card" style="padding:10px;">
     <!-- images.js will render inside here -->
   </div>
