--- a/index.html
+++ b/index.html
@@ -676,6 +676,7 @@
 <script src="./modules/owned.js" defer></script>
 <script src="./modules/images.js" defer></script>
 <script src="./modules/sheet.js" defer></script>
+<script src="modules/rolls.js" defer></script>
 <script src="./script.js" defer></script>
 
 <!-- ===== TRS:80 • Technical Readout Boot ===== -->
